implement data service

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "author": "Hoang Nguyen <contact@hoangnd.me>",
   "dependencies": {
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1"
   },
   "devDependencies": {
     "chai": "^4.0.2",
