--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
     "node": true,
     "browser": true,
     "es6": true,
-    "mocha": true
+    "mocha": true,
+    "jquery": true
   },
   "extends": ["eslint:recommended"],
   "rules": {
